--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+!doctype <!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Carpeta Ejercicio</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="app.css"> 
+    <title>Learning Croupier</title>      
 </head>
 <body>
-    <h1>Lista de ejercicios</h1>
-    <a href="calculadora-simple/">Calculadora Simple</a>
+
+    <h1>Lista de Ejercicios</h1>
+    <p> <h2><a href="calculadora-simple/index.html">Calculadora Simple</a> </h2></p>
+    <p> <h2><a href="youtube-simple/index.html">Youtube Academy</a></h2></p>
 </body>
 </html>
