--- a/youtube-simple/formulario/formulario.html
+++ b/youtube-simple/formulario/formulario.html
@@ -7,6 +7,24 @@
     <title>Formulario</title>
 </head>
 <body>
-    
+<form action="/my-handling-form-page" method="post">
+    <div>
+        <label for="id">ID:</label>
+        <input type="id" id="id" />
+        </div>
+     <div>
+        <label for="url">URL:</label>
+        <input type="url" id="url" />
+     </div>
+     <div>
+            <label for="title">Titulo:</label>
+            <input type="title" id="title" />
+         </div>
+      <div>
+        <label for="msg">Comentarios:</label>
+        <textarea id="msg"></textarea>
+       </div>
+       <button id="save">Guardar Datos</button>
+</form>
 </body>
 </html>
